@@ -1,3 +1,9 @@
+2002-07-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (move_window_doit):
+	* fvwm/decorations.c (check_if_function_allowed):
+	fixed the MWM_FUNC_MOVE hint
+
 2002-07-22  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/fvwmsignal.c (fvwmSelect):
